k8s/base/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  namespace: everundang
  labels:
    app.kubernetes.io/name: everundang
    app.kubernetes.io/component: backend
spec:
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
